--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,6 @@
 *{
     box-sizing: border-box;
 }
-header {
-    background-color: rgb(148, 0, 211);
-    color: rgb(255, 255, 255);
-    height: 64px;
-    padding: 10px;
-    
-}
-header h1{
-    margin-left: 70px;
-}
 #app{
     display: flex;
     flex-direction: column;
@@ -23,14 +13,29 @@ header h1{
     
  
 }
-#produto{
+
+header {
+    background-color: var(--bs-blue);
+    color: rgb(255, 255, 255);
+    height: 64px;
+    padding: 10px;
+    
+}
+header h1{
+    margin-left: 70px;
+}
+
+#post{
     margin: 20px;
 }
-#produto-corpo{
-    display: flex;
-    flex-direction: column;
+#card{
+    height: 220px;
+    
+
 }
-#produto-corpo span, label{
-    margin: 10px 0;
-    font-weight: bold;
+
+#data{
+    position: relative;
+    top: 70px;
+    opacity: 0.7;
 }
